# my_gym

My_Coach/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  my_coach.glade.bak  my_coach.gladep.bak
My_Coach/autom4te.cache/: output.0  requests  traces.0  traces.1
My_Coach/po/: Makefile  Makefile.in
My_Coach/src/: 333.txt  696.txt  Makefile  Makefile.am  Makefile.in  ajoutdate.c  ajoutdate.h  callbacks.c  callbacks.h  checkdate.c  checkdate.h  coaches.txt  date.txt  daterdv.txt  dispo.c  dispo.h  fiches.txt  getlogin.c  getlogin.h  interface.c.bak  lastlogiin.txt  lastlogin.c  lastlogin.h  main.c  my_coach  nafkhmajdi.c  nafkhmajdi.h  suppper.c  suppper.h  user.txt  verif.c  verif.h
